# libbarrett

./: .bash_aliases  BTech_Format.xml  CMakeLists.txt  CMakeListsXeno26.txt  Doxyfile  Makefile.am  README  README.txt  configure.ac  libbarrett.dox  mainpage.dox
branches/1.x/: CMakeLists.txt
examples/: .cproject  CMakeLists.txt  README  README.txt  ex01_initialize_wam.cpp  ex02_display_basic_info.cpp  ex02_hold_position.cpp  ex03_simple_move.cpp  ex04_display_basic_info.cpp  ex05_systems_intro.cpp  ex06_realtime_move.cpp  ex06_systems_intro.cpp  ex09_teach_and_play.cpp  ex10_haptics.cpp  ex10_haptics.h  ex10_haptics_visualization.py  ex11_haptics.cpp  ex11_master_master.cpp  ex13_master_master.cpp  hold_joint_position.cpp  makefile.targets  polynomial_evaluator.cpp  seven_dof_only.cpp  zero_torque.cpp
examples/cylinder/: cylinder.c  refgen_cylinder.h
examples/draw2d/: Makefile  control_draw2d.c
examples/ex5-simplemove/: Makefile
examples/mastermaster/: Makefile  refgen_mastermaster.c  refgen_mastermaster.h
examples/mastermaster_loc/: refgen_mastermaster_loc.c
examples/src/: hold_joint_position.cpp
examples/trimesh/: refgen_trimesh.c  trimesh.c
examples/wamDisplay4Barrett/: Makefile
proficio_sandbox/: CMakeLists.txt  box_builder.cpp  dual_rehab.cpp  haptic_world.h  mirror_image.cpp  mirror_image.h  proficio.py  rehab_world.cpp  rowing.cpp  simon.cpp  simon.h  simon_visualization.py
proficio_sandbox/configurations/: README.txt  bash_aliases.txt  calibration.conf.left  calibration.conf.right  gravitycal.conf.left  gravitycal.conf.right  wam3.conf.left  wam3.conf.right  zerocal.conf.left  zerocal.conf.right
sandbox/: .cproject  CMakeLists.txt  autohome.cpp  autotensioner.cpp  bus_manager.cpp  can_terminal.cpp  constrain_to_path.cpp  dual_rehab_wams.cpp  friction_data.cpp  full_system_test.cpp  gimbals_hand_controller.cpp  hand.cpp  hand_buttons_test.cpp  hand_feedback.cpp  hand_motor_control_stress_test.cpp  hand_self_preservation.cpp  haptics.cpp  high_level_wam.cpp  inverse_dynamics_test.conf  inverse_dynamics_test.cpp  inverse_dynamics_test_teach_and_play.cpp  joint_encoder_index_adjustments.cpp  joint_encoder_init.cpp  joint_encoder_set_offsets.cpp  llw.h  load_ft_cal.cpp  log_ft_data.cpp  log_ft_data_with_wam.cpp  log_hand_jp.cpp  log_sg_data.cpp  log_temp_data.cpp  log_velocity.cpp  low_level_wam.cpp  makefile.targets  master_master.cpp  master_master.h  mouse_follow.cpp  move_to.cpp  network_haptics.h  os_test.cpp  (+16 more)
sandbox/Debug/: makefile
sandbox/feather_touch/: CMakeLists.txt  feather_touch.conf
sandbox/src/: can_terminal.cpp  cartesian_hold.cpp  dynamic_dof.cpp  hand_feedback.cpp  haptics.cpp  high_level_wam.cpp  load_ft_cal.cpp  log_ft_data.cpp  log_ft_data_with_wam.cpp  log_sg_data.cpp  log_velocity.cpp  low_level_wam.cpp  master_master.cpp  puck_terminal.cpp  read_safety_state.cpp  tactile_test.cpp  teach.cpp  tutorial.cpp  update_properties.cpp  zero_torque.cpp
sandbox/teach_and_play/: calibration3.conf  play.cpp  teach.cpp
src/: CMakeLists.txt  exception.cpp  os.cpp  property_list.cpp  property_list.py  puck.cpp  puck_group.cpp  python.cpp  python_interface_test.py  stl_utils.cpp
src/bus/: bus_manager.cpp  can_socket-pcan.cpp  can_socket-rtcan.cpp  can_socket.cpp  communications_bus.cpp  python.cpp
src/calgrav/: calgrav.h
src/cdlbt/: bus.c  bus_can.c  calgrav.c  dynamics.c  os.c  spline.c  wambot_phys.c
src/control/: control.h  control_cartesian_xyz_q.c
src/dynamics/: dynamics.c
src/gsl/: gsl.c
src/math/: trapezoidal_velocity_profile.cpp
src/products/: force_torque_sensor.cpp  hand.cpp  motor_puck.cpp  multi_puck_product.cpp  product_manager.cpp  property_list.cpp  property_list.py  puck.cpp  puck_group.cpp  python.cpp  safety_module.cpp  tactile_puck.cpp
src/profile/: profile.c
src/refgen/: refgen_teachplay.h  refgen_teachplay_const.c
src/systems/: execution_manager.cpp  real_time_execution_manager.cpp  system.cpp
src/thread/: real_time_mutex-xenomai.cpp  real_time_mutex.cpp
src/wambot/: wambot_phys.c  wambot_phys.h  wambot_sim.h
trunk/: CMakeLists.txt  Doxyfile  Makefile.am  README  README.txt  configure.ac
trunk/bindings/: Makefile.am
trunk/cdlbt/: .cproject
trunk/checkout/: makefile.targets
trunk/common/: prebuild.sh  set-wam-hostname  set-wam-ip  wam-ip.txt  wamdo
trunk/config/: autotension.conf  calibration.conf  wam3.conf  wam4.conf  wam4.config  wam7.conf  wam7.config  wam7g.conf  wam7w.conf  wamg.conf  wamg.config
trunk/deploy/: README  deploy.sh
trunk/doc/: Doxyfile
trunk/examples/: CMakeLists.txt  Makefile  ex01_initialize_wam.cpp  ex02_hold_position.cpp  ex03_hold_position.cpp  ex03_simple_move.cpp  ex05_systems_intro.cpp  ex06_realtime_move.cpp  ex06_systems_intro.cpp  ex07_realtime_move.cpp  ex08_realtime_data_logging.cpp  ex09_teach_and_play.cpp  ex10_haptics.cpp  ex10_haptics.h  ex11_haptics.cpp  ex11_haptics_visualization.py  ex11_master_master.cpp  ex13_master_master.h  hold_joint_position.cpp  seven_dof_only.cpp  wam4.config  wam7.config  zero_torque.cpp
trunk/library-tests/: .cproject  test.config
trunk/pkg/: debian.mk
trunk/programs/: .cproject  .project  CMakeLists.txt  autotension.cpp  gravitycal.cpp  install_config_files  makefile.targets  wamdiscover  zerocal.cpp
trunk/sandbox/: .cproject  CMakeLists.txt  autohome.cpp  autotensioner.cpp  bow_and_arrow.cpp  bus_manager.cpp  can_timing.cpp  cartesian_hold.cpp  constrain_to_path.cpp  ft_persistent_tare.cpp  full_system_test.cpp  gimbals_hand_controller.cpp  hand.cpp  hand_buttons_test.cpp  hand_feedback.cpp  haptics.cpp  high_level_wam.cpp  inverse_dynamics_test.conf  inverse_dynamics_test.cpp  inverse_dynamics_test_teach_and_play_accel.cpp  joint_encoder_index_adjustments.cpp  joint_encoder_set_offsets.cpp  llw.h  load_ft_cal.cpp  log_ft_data.cpp  log_ft_data_with_wam.cpp  log_hand_jp.cpp  log_sg_data.cpp  log_temp_data.cpp  low_level_wam.cpp  makefile.targets  moveToPose.cpp  move_to.cpp  network_haptics.cpp  os_test.cpp  read_pendant_state.cpp  read_safety_state.cpp  rt_mutex_test.cpp  safety_module.cpp  (+7 more)
(+2030 files in other folders)
